# python-fastapi-postgres-benchmark

./: .env.example  Makefile  app.py  docker-compose.yml  pyproject.toml  test_hello.py
.docs/: instructions.md  pass_to_pass.txt
.github/workflows/: tests.yml
app/: Makefile  llm_test.c  main.py  math.c  math.h  optimized.py  test_optimization.py  test_runner
app/batfish/: batfish_demo.py
app/batfish/containers/ids/b3JnLmJhdGZpc2guaWRlbnRpZmllcnMuTmV0d29ya0lk/: ZXhhbXBsZS5pZA==
app/batfish/experimental/: bgp-3-node-test.py  gnmi_test.go  gnmi_test_v2.go  isis-3.py  isis-4.py  test_batfish.py
app/batfish/networks/example/3-node-ISIS/: test_topology.py
app/batfish/networks/example/3-node-ISIS/configs/: r1.cfg  r2.cfg  r3.cfg
app/batfish/networks/example/isis-4-node/configs/: r2.cfg
app/batfish/networks/example/isis-4-node/hosts/: host1.json
app/batfish/networks/example/isis-4-node/iptables/: host1.iptables
app/batfish/networks/example/linear-3node-isis-ibgp/configs/: r1.cfg  r2.cfg  r3.cfg
app/batfish/networks/example/live/configs/: as2border1.cfg
app/batfish/networks/simple/configs/: r1.cfg
app/cleaned_repo/: helper1.py
app/core/: config.py  database_session.py
app/data/: shakespeare.txt
app/original_repo/: helper1.py  helper2.py  helper3.py  main.py
app/snake/: custom_tests.c  interactive-snake  snake  snake.c  state.c  unit-tests
app/tests/: conftest.py  test.py  test_health_check.py  test_hello.py
app/tests/test_auth/: test_register_new_user.py
app/tests/test_users/: test_read_current_user.py
(+308 files in other folders)
