[tool.poetry]
authors = ["admin <admin@example.com>"]
description = "FastAPI project generated using minimal-fastapi-postgres-template."
name = "app"
version = "0.1.0-alpha"

[tool.poetry.dependencies]
python = "^3.12"

alembic = "^1.13.2"
asyncpg = "^0.30.0"
bcrypt = "^4.1.3"
fastapi = "^0.115.4"
pydantic = { extras = ["dotenv", "email"], version = "^2.8.0" }
pydantic-settings = "^2.3.4"
pyjwt = "^2.8.0"
python-multipart = "^0.0.16"
sqlalchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"
freezegun = "^1.5.1"
gevent = "^24.2.1"
httpx = "^0.27.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.7.1"
types-passlib = "^1.7.7.20240327"
uvicorn = { extras = ["standard"], version = "^0.32.0" }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov --cov-report xml --cov-report term-missing --cov-fail-under=50"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["app/tests"]

[tool.coverage.run]
concurrency = ["gevent"]
omit = ["app/tests/*"]
source = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501"]
select = ["E", "F", "I", "PL", "UP", "W"]
